--- a/app/package.json
+++ b/app/package.json
@@ -7,9 +7,11 @@
     "@babel/preset-env": "^7.3.4",
     "autoprefixer": "^9.4.10",
     "babel-loader": "^8.0.5",
+    "critters-webpack-plugin": "^2.4.0",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
     "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "postcss-loader": "^3.0.0",
     "sass": "^1.17.2",
