--- a/app/package.json
+++ b/app/package.json
@@ -1,22 +1,36 @@
 {
+  "name": "code",
+  "version": "1.0.0",
+  "private": true,
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "start": "webpack-dev-server  --config webpack.dev.js --open",
+    "build": "webpack --config webpack.prod.js",
+    "build-dev": "webpack --config webpack.dev.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "autoprefixer": "^9.4.10",
-    "babel-loader": "^8.0.5",
-    "critters-webpack-plugin": "^2.4.0",
-    "css-loader": "^2.1.1",
-    "cssnano": "^4.1.10",
+    "bootstrap": "^4.3.1",
+    "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1",
     "mini-css-extract-plugin": "^0.5.0",
-    "postcss-loader": "^3.0.0",
-    "sass": "^1.17.2",
+    "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "popper.js": "^1.14.7",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
+  },
+  "dependencies": {
+    "clean-webpack-plugin": "^2.0.0"
   }
 }
