--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "bootstrap": "^4.3.1",
+    "critters-webpack-plugin": "^2.4.0",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
