--- a/app/package.json
+++ b/app/package.json
@@ -6,8 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server  --config webpack.dev.js --open",
-    "build": "webpack --config webpack.prod.js",
-    "build-dev": "webpack --config webpack.dev.js"
+    "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +16,7 @@
     "critters-webpack-plugin": "^2.4.0",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
+    "grunt-cli": "^1.3.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
