--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,4 @@ services:
         volumes:
           - ./app:/var/www/html
           - ./docker/supervisord.conf:/etc/supervisor/conf.d/supervisord.conf
-          - ./var/www/html/node_modules
+          - /var/www/html/node_modules
